--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <template id="about">
         <h2>about me</h2>
         <div id="aboutMe">
-        <img id="aboutPic" src="/images/blurry.JPG" alt="picture of a girl and a cat">
+        <img id="aboutPic" src="images/blurry.JPG" alt="picture of a girl and a cat">
         <p>I'm currently a student at Virginia Commonwealth University in the Interdisciplinary program, to graduate Spring 2023. My disciplines are chemistry and computer science. Outside of my studies, I enjoy video games, reading, and drawing.</p>
         </div>
     </template> 
